@@ -98,9 +98,8 @@ class KubernetesClientConfigMapPropertySourceLocatorTests {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get("/api/v1/namespaces/default/configmaps")
 				.willReturn(aResponse().withStatus(200).withBody(new JSON().serialize(PROPERTIES_CONFIGMAP_LIST))));
-		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(
-			true, List.of(), List.of(), Map.of(), true, "bootstrap-640", null, false, false, false, RetryProperties.DEFAULT
-		);
+		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(true, List.of(), List.of(),
+				Map.of(), true, "bootstrap-640", null, false, false, false, RetryProperties.DEFAULT);
 		MockEnvironment mockEnvironment = new MockEnvironment();
 		mockEnvironment.setProperty("spring.cloud.kubernetes.client.namespace", "default");
 		PropertySource<?> propertySource = new KubernetesClientConfigMapPropertySourceLocator(api,
@@ -115,12 +114,10 @@ class KubernetesClientConfigMapPropertySourceLocatorTests {
 		stubFor(get("/api/v1/namespaces/default/configmaps")
 				.willReturn(aResponse().withStatus(200).withBody(new JSON().serialize(PROPERTIES_CONFIGMAP_LIST))));
 
-		ConfigMapConfigProperties.Source source = new ConfigMapConfigProperties.Source(
-			"bootstrap-640", "default", Collections.emptyMap(), null, null, null
-		);
-		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(
-			true, List.of(), List.of(source), Map.of(), true, "fake-name", null, false, false, false, RetryProperties.DEFAULT
-		);
+		ConfigMapConfigProperties.Source source = new ConfigMapConfigProperties.Source("bootstrap-640", "default",
+				Collections.emptyMap(), null, null, null);
+		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(true, List.of(),
+				List.of(source), Map.of(), true, "fake-name", null, false, false, false, RetryProperties.DEFAULT);
 
 		KubernetesClientProperties kubernetesClientProperties = new KubernetesClientProperties();
 		kubernetesClientProperties.setNamespace("dev");
@@ -142,9 +139,8 @@ class KubernetesClientConfigMapPropertySourceLocatorTests {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get("/api/v1/namespaces/default/configmaps")
 				.willReturn(aResponse().withStatus(200).withBody(new JSON().serialize(PROPERTIES_CONFIGMAP_LIST))));
-		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(
-			true, List.of(), List.of(), Map.of(), true, "bootstrap-640", null, false, false, false, RetryProperties.DEFAULT
-		);
+		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(true, List.of(), List.of(),
+				Map.of(), true, "bootstrap-640", null, false, false, false, RetryProperties.DEFAULT);
 		KubernetesClientProperties kubernetesClientProperties = new KubernetesClientProperties();
 		kubernetesClientProperties.setNamespace(""); // empty on purpose
 		assertThatThrownBy(() -> new KubernetesClientConfigMapPropertySourceLocator(api, configMapConfigProperties,
@@ -164,9 +160,8 @@ class KubernetesClientConfigMapPropertySourceLocatorTests {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get("/api/v1/namespaces/default/configmaps")
 				.willReturn(aResponse().withStatus(200).withBody(new JSON().serialize(PROPERTIES_CONFIGMAP_LIST))));
-		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(
-			true, List.of(), List.of(), Map.of(), true, "bootstrap-640", null, false, false, false, RetryProperties.DEFAULT
-		);
+		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(true, List.of(), List.of(),
+				Map.of(), true, "bootstrap-640", null, false, false, false, RetryProperties.DEFAULT);
 		KubernetesClientProperties kubernetesClientProperties = new KubernetesClientProperties();
 		kubernetesClientProperties.setNamespace(""); // empty on purpose
 		assertThatThrownBy(() -> new KubernetesClientConfigMapPropertySourceLocator(api, configMapConfigProperties,
@@ -180,9 +175,8 @@ class KubernetesClientConfigMapPropertySourceLocatorTests {
 		stubFor(get("/api/v1/namespaces/default/configmaps")
 				.willReturn(aResponse().withStatus(500).withBody("Internal Server Error")));
 
-		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(
-			true, List.of(), List.of(), Map.of(), true, "bootstrap-640", "default", false, false, true, RetryProperties.DEFAULT
-		);
+		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(true, List.of(), List.of(),
+				Map.of(), true, "bootstrap-640", "default", false, false, true, RetryProperties.DEFAULT);
 
 		KubernetesClientConfigMapPropertySourceLocator locator = new KubernetesClientConfigMapPropertySourceLocator(api,
 				configMapConfigProperties, new KubernetesNamespaceProvider(new MockEnvironment()));
@@ -197,9 +191,8 @@ class KubernetesClientConfigMapPropertySourceLocatorTests {
 		stubFor(get("/api/v1/namespaces/default/configmaps")
 				.willReturn(aResponse().withStatus(500).withBody("Internal Server Error")));
 
-		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(
-			true, List.of(), List.of(), Map.of(), true, "bootstrap-640", "default", false, false, false, RetryProperties.DEFAULT
-		);
+		ConfigMapConfigProperties configMapConfigProperties = new ConfigMapConfigProperties(true, List.of(), List.of(),
+				Map.of(), true, "bootstrap-640", "default", false, false, false, RetryProperties.DEFAULT);
 
 		KubernetesClientConfigMapPropertySourceLocator locator = new KubernetesClientConfigMapPropertySourceLocator(api,
 				configMapConfigProperties, new KubernetesNamespaceProvider(new MockEnvironment()));
