@@ -19,6 +19,7 @@ package org.springframework.cloud.kubernetes.client.config;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import com.github.tomakehurst.wiremock.WireMockServer;
 import com.github.tomakehurst.wiremock.client.WireMock;
@@ -33,6 +34,7 @@ import org.junit.jupiter.api.Test;
 
 import org.springframework.cloud.kubernetes.commons.KubernetesNamespaceProvider;
 import org.springframework.cloud.kubernetes.commons.config.NamespaceResolutionFailedException;
+import org.springframework.cloud.kubernetes.commons.config.RetryProperties;
 import org.springframework.cloud.kubernetes.commons.config.SecretsConfigProperties;
 import org.springframework.core.env.PropertySource;
 import org.springframework.mock.env.MockEnvironment;
@@ -106,23 +108,17 @@ class KubernetesClientSecretsPropertySourceLocatorTests {
 	void getLocateWithSources() {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get(LIST_API).willReturn(aResponse().withStatus(200).withBody(LIST_BODY)));
-		SecretsConfigProperties secretsConfigProperties = new SecretsConfigProperties();
 
-		SecretsConfigProperties.Source source1 = new SecretsConfigProperties.Source(
-			"db-secret", "", Collections.emptyMap(), null, null, null
+		SecretsConfigProperties.Source source1 = new SecretsConfigProperties.Source("db-secret", "",
+				Collections.emptyMap(), null, null, null);
+
+		SecretsConfigProperties.Source source2 = new SecretsConfigProperties.Source("rabbit-password", "",
+				Collections.emptyMap(), null, null, null);
+
+		SecretsConfigProperties secretsConfigProperties = new SecretsConfigProperties(
+			true, Map.of(), List.of(), List.of(source1, source2), true, "app", "default", false, true, false, RetryProperties.DEFAULT
 		);
 
-		SecretsConfigProperties.Source source2 = new SecretsConfigProperties.Source(
-			"rabbit-password", "", Collections.emptyMap(), null, null, null
-		);
-
-		List<SecretsConfigProperties.Source> sources = new ArrayList<>();
-		sources.add(source1);
-		sources.add(source2);
-		secretsConfigProperties.setName("app");
-		secretsConfigProperties.setNamespace("default");
-		secretsConfigProperties.setSources(sources);
-		secretsConfigProperties.setEnableApi(true);
 		PropertySource<?> propertySource = new KubernetesClientSecretsPropertySourceLocator(api,
 				new KubernetesNamespaceProvider(new MockEnvironment()), secretsConfigProperties).locate(ENV);
 		assertThat(propertySource.containsProperty("password")).isTrue();
@@ -133,10 +129,10 @@ class KubernetesClientSecretsPropertySourceLocatorTests {
 	void getLocateWithOutSources() {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get(LIST_API).willReturn(aResponse().withStatus(200).withBody(LIST_BODY)));
-		SecretsConfigProperties secretsConfigProperties = new SecretsConfigProperties();
-		secretsConfigProperties.setName("db-secret");
-		secretsConfigProperties.setNamespace("default");
-		secretsConfigProperties.setEnableApi(true);
+		SecretsConfigProperties secretsConfigProperties = new SecretsConfigProperties(
+			true, Map.of(), List.of(), List.of(), true, "db-secret", "default", false, true, false, RetryProperties.DEFAULT
+		);
+
 		PropertySource<?> propertySource = new KubernetesClientSecretsPropertySourceLocator(api,
 				new KubernetesNamespaceProvider(new MockEnvironment()), secretsConfigProperties).locate(ENV);
 		assertThat(propertySource.containsProperty("password")).isTrue();
@@ -154,10 +150,11 @@ class KubernetesClientSecretsPropertySourceLocatorTests {
 	void testLocateWithoutNamespaceConstructor() {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get(LIST_API).willReturn(aResponse().withStatus(200).withBody(LIST_BODY)));
-		SecretsConfigProperties secretsConfigProperties = new SecretsConfigProperties();
-		secretsConfigProperties.setName("db-secret");
-		secretsConfigProperties.setNamespace(""); // empty on purpose
-		secretsConfigProperties.setEnableApi(true);
+
+		SecretsConfigProperties secretsConfigProperties = new SecretsConfigProperties(
+			true, Map.of(), List.of(), List.of(), true, "db-secret", "", false, true, false, RetryProperties.DEFAULT
+		);
+
 		assertThatThrownBy(() -> new KubernetesClientSecretsPropertySourceLocator(api,
 				new KubernetesNamespaceProvider(new MockEnvironment()), secretsConfigProperties).locate(ENV))
 						.isInstanceOf(NamespaceResolutionFailedException.class);
@@ -168,11 +165,9 @@ class KubernetesClientSecretsPropertySourceLocatorTests {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get(LIST_API).willReturn(aResponse().withStatus(500).withBody("Internal Server Error")));
 
-		SecretsConfigProperties secretsConfigProperties = new SecretsConfigProperties();
-		secretsConfigProperties.setName("db-secret");
-		secretsConfigProperties.setNamespace("default");
-		secretsConfigProperties.setEnableApi(true);
-		secretsConfigProperties.setFailFast(true);
+		SecretsConfigProperties secretsConfigProperties = new SecretsConfigProperties(
+			true, Map.of(), List.of(), List.of(), true, "db-secret", "default", false, true, true, RetryProperties.DEFAULT
+		);
 
 		KubernetesClientSecretsPropertySourceLocator locator = new KubernetesClientSecretsPropertySourceLocator(api,
 				new KubernetesNamespaceProvider(new MockEnvironment()), secretsConfigProperties);
@@ -186,11 +181,9 @@ class KubernetesClientSecretsPropertySourceLocatorTests {
 		CoreV1Api api = new CoreV1Api();
 		stubFor(get(LIST_API).willReturn(aResponse().withStatus(500).withBody("Internal Server Error")));
 
-		SecretsConfigProperties secretsConfigProperties = new SecretsConfigProperties();
-		secretsConfigProperties.setName("db-secret");
-		secretsConfigProperties.setNamespace("default");
-		secretsConfigProperties.setEnableApi(true);
-		secretsConfigProperties.setFailFast(false);
+		SecretsConfigProperties secretsConfigProperties = new SecretsConfigProperties(
+			true, Map.of(), List.of(), List.of(), true, "db-secret", "default", false, true, false, RetryProperties.DEFAULT
+		);
 
 		KubernetesClientSecretsPropertySourceLocator locator = new KubernetesClientSecretsPropertySourceLocator(api,
 				new KubernetesNamespaceProvider(new MockEnvironment()), secretsConfigProperties);
